# CMake-Dependency-Manager

./: .gitignore  CMakeLists.txt  README.md
cmake/: ManageDependencies.cmake
